# ann

./: .gitignore  :q  CMakeLists.txt  Makefile  autoencoder-extractor  autoencoder-outlier-detector  config.json.dist  config2.json  edge-detector  massif.out.6720  split
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: FetchCSVData.hpp  Math.hpp  MatrixToVector.hpp  Misc.hpp  MultiplyMatrix.hpp
papers/training/: main.aux  main.tex
quizzes/: main.aux  main.tex
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  autoencoder-extractor.cpp  autoencoder-outlier-detector.cpp  edge-detector.cpp  main.cpp
src/NeuralNetwork/: NeuralNetwork.cpp  backPropagation.cpp  feedForward.cpp  loadWeights.cpp  saveWeights.cpp  setErrors.cpp  train.cpp
src/utils/: FetchCSVData.cpp  Math.cpp  MatrixToVector.cpp  Misc.cpp  MultiplyMatrix.cpp
